force-app/main/default/objects/Prospect__c/fields/Campanha__c.field-meta.xml
<CustomField>
    <fullName>Campanha__c</fullName>
    <label>Campanha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100 Maiores Bancos</fullName>
            </value>
            <value>
                <fullName>AASP</fullName>
            </value>
            <value>
                <fullName>Ação Piracicaba</fullName>
            </value>
            <value>
                <fullName>Armazém Fit</fullName>
            </value>
            <value>
                <fullName>CDL Formosa</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>CISCO</fullName>
            </value>
            <value>
                <fullName>GERHAI</fullName>
            </value>
            <value>
                <fullName>Incluir campanha</fullName>
            </value>
            <value>
                <fullName>Indicação MTE CG</fullName>
            </value>
            <value>
                <fullName>John Deere</fullName>
            </value>
            <value>
                <fullName>Maiores Empresas</fullName>
            </value>
            <value>
                <fullName>Migração</fullName>
            </value>
            <value>
                <fullName>Panfletagem JT</fullName>
            </value>
            <value>
                <fullName>PR-SJBV</fullName>
            </value>
            <value>
                <fullName>Retomada</fullName>
            </value>
            <value>
                <fullName>Top Startups 2022</fullName>
            </value>
            <value>
                <fullName>Leads2b</fullName>
                <isActive>false</isActive>
                <label>Leads2b</label>
            </value>
            <value>
                <fullName>PR - SJBV</fullName>
                <isActive>false</isActive>
                <label>PR - SJBV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>