force-app/main/default/objects/Prospect__c/fields/Capital_Social__c.field-meta.xml
<CustomField>
    <fullName>Capital_Social__c</fullName>
    <label>Capital Social</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>