force-app/main/default/objects/Prospect__c/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <label>Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auxiliar / Assistente</fullName>
                <label>Auxiliar/Assistente</label>
            </value>
            <value>
                <fullName>Analista</fullName>
            </value>
            <value>
                <fullName>Coordenador / Supervisor</fullName>
                <label>Coordenador/Supervisor</label>
            </value>
            <value>
                <fullName>Gerente</fullName>
            </value>
            <value>
                <fullName>Diretor</fullName>
            </value>
            <value>
                <fullName>VP/Superintendente</fullName>
            </value>
            <value>
                <fullName>CEO/CFO/CMO/Presidente</fullName>
            </value>
            <value>
                <fullName>Proprietário / Sócio</fullName>
                <label>Proprietário/Sócio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>