force-app/main/default/objects/Prospect__c/fields/Carteira_Consultor__c.field-meta.xml
<CustomField>
    <fullName>Carteira_Consultor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carteira Consultor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Unidade</value>
        </filterItems>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>