force-app/main/default/objects/Prospect__c/fields/CNAE__c.field-meta.xml
<CustomField>
    <fullName>CNAE__c</fullName>
    <label>CNAE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01..03 AGRICULTURA PECUÁRIA PRODUÇÃO FLORESTAL PESCA E AQÜICULTURA</fullName>
                <label>01..03 AGRICULTURA, PECUÁRIA, PRODUÇÃO FLORESTAL, PESCA E AQÜICULTURA</label>
            </value>
            <value>
                <fullName>05..09 INDÚSTRIAS EXTRATIVAS</fullName>
            </value>
            <value>
                <fullName>10..33 INDÚSTRIAS DE TRANSFORMAÇÃO</fullName>
            </value>
            <value>
                <fullName>35..35 ELETRICIDADE E GÁS</fullName>
            </value>
            <value>
                <fullName>36..39 ÁGUA ESGOTO ATIVIDADES DE GESTÃO DE RESÍDUOS E DESCONTAMINAÇÃO</fullName>
                <label>36..39 ÁGUA, ESGOTO, ATIVIDADES DE GESTÃO DE RESÍDUOS E DESCONTAMINAÇÃO</label>
            </value>
            <value>
                <fullName>41..43 CONSTRUÇÃO</fullName>
            </value>
            <value>
                <fullName>45..47 COMÉRCIO REPARAÇÃO DE VEÍCULOS AUTOMOTORES E MOTOCICLETAS</fullName>
                <label>45..47 COMÉRCIO; REPARAÇÃO DE VEÍCULOS AUTOMOTORES E MOTOCICLETAS</label>
            </value>
            <value>
                <fullName>49..53 TRANSPORTE ARMAZENAGEM E CORREIO</fullName>
                <label>49..53 TRANSPORTE, ARMAZENAGEM E CORREIO</label>
            </value>
            <value>
                <fullName>55..56 ALOJAMENTO E ALIMENTAÇÃO</fullName>
            </value>
            <value>
                <fullName>58..63 INFORMAÇÃO E COMUNICAÇÃO</fullName>
            </value>
            <value>
                <fullName>64..66 ATIVIDADES FINANCEIRAS DE SEGUROS E SERVIÇOS RELACIONADOS</fullName>
                <label>64..66 ATIVIDADES FINANCEIRAS, DE SEGUROS E SERVIÇOS RELACIONADOS</label>
            </value>
            <value>
                <fullName>68..68 ATIVIDADES IMOBILIÁRIAS</fullName>
            </value>
            <value>
                <fullName>69..75 ATIVIDADES PROFISSIONAIS CIENTÍFICAS E TÉCNICAS</fullName>
                <label>69..75 ATIVIDADES PROFISSIONAIS, CIENTÍFICAS E TÉCNICAS</label>
            </value>
            <value>
                <fullName>77..82 ATIVIDADES ADMINISTRATIVAS E SERVIÇOS COMPLEMENTARES</fullName>
            </value>
            <value>
                <fullName>84..84 ADMINISTRAÇÃO PÚBLICA DEFESA E SEGURIDADE SOCIAL</fullName>
                <label>84..84 ADMINISTRAÇÃO PÚBLICA, DEFESA E SEGURIDADE SOCIAL</label>
            </value>
            <value>
                <fullName>85..85 EDUCAÇÃO</fullName>
            </value>
            <value>
                <fullName>86..88 SAÚDE HUMANA E SERVIÇOS SOCIAIS</fullName>
            </value>
            <value>
                <fullName>90..93 ARTES CULTURA ESPORTE E RECREAÇÃO</fullName>
                <label>90..93 ARTES, CULTURA, ESPORTE E RECREAÇÃO</label>
            </value>
            <value>
                <fullName>94..96 OUTRAS ATIVIDADES DE SERVIÇOS</fullName>
            </value>
            <value>
                <fullName>97..97 SERVIÇOS DOMÉSTICOS</fullName>
            </value>
            <value>
                <fullName>99..99 ORGANISMOS INTERNACIONAIS E OUTRAS INSTITUIÇÕES EXTRATERRITORIAIS</fullName>
            </value>
            <value>
                <fullName>Estudante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>