force-app/main/default/objects/Prospect__c/fields/CNAE_Divisao__c.field-meta.xml
<CustomField>
    <fullName>CNAE_Divisao__c</fullName>
    <label>CNAE Divisão</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CNAE__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 AGRICULTURA PECUÁRIA E SERVIÇOS RELACIONADOS</fullName>
                <label>01 AGRICULTURA, PECUÁRIA E SERVIÇOS RELACIONADOS</label>
            </value>
            <value>
                <fullName>02 PRODUÇÃO FLORESTAL</fullName>
            </value>
            <value>
                <fullName>03 PESCA E AQÜICULTURA</fullName>
            </value>
            <value>
                <fullName>05 EXTRAÇÃO DE CARVÃO MINERAL</fullName>
            </value>
            <value>
                <fullName>06 EXTRAÇÃO DE PETRÓLEO E GÁS NATURAL</fullName>
            </value>
            <value>
                <fullName>07 EXTRAÇÃO DE MINERAIS METÁLICOS</fullName>
            </value>
            <value>
                <fullName>08 EXTRAÇÃO DE MINERAIS NÃO-METÁLICOS</fullName>
            </value>
            <value>
                <fullName>09 ATIVIDADES DE APOIO À EXTRAÇÃO DE MINERAIS</fullName>
            </value>
            <value>
                <fullName>10 FABRICAÇÃO DE PRODUTOS ALIMENTÍCIOS</fullName>
            </value>
            <value>
                <fullName>11 FABRICAÇÃO DE BEBIDAS</fullName>
            </value>
            <value>
                <fullName>12 FABRICAÇÃO DE PRODUTOS DO FUMO</fullName>
            </value>
            <value>
                <fullName>13 FABRICAÇÃO DE PRODUTOS TÊXTEIS</fullName>
            </value>
            <value>
                <fullName>14 CONFECÇÃO DE ARTIGOS DO VESTUÁRIO E ACESSÓRIOS</fullName>
            </value>
            <value>
                <fullName>15 PREPARAÇÃO DE COUROS E FABRICAÇÃO DE ARTEFATOS DE COURO ARTIGOS PARA VIAGEM E CALÇADOS</fullName>
                <label>15 PREPARAÇÃO DE COUROS E FABRICAÇÃO DE ARTEFATOS DE COURO, ARTIGOS PARA VIAGEM E CALÇADOS</label>
            </value>
            <value>
                <fullName>16 FABRICAÇÃO DE PRODUTOS DE MADEIRA</fullName>
            </value>
            <value>
                <fullName>17 FABRICAÇÃO DE CELULOSE PAPEL E PRODUTOS DE PAPEL</fullName>
                <label>17 FABRICAÇÃO DE CELULOSE, PAPEL E PRODUTOS DE PAPEL</label>
            </value>
            <value>
                <fullName>18 IMPRESSÃO E REPRODUÇÃO DE GRAVAÇÕES</fullName>
            </value>
            <value>
                <fullName>19 FABRICAÇÃO DE COQUE DE PRODUTOS DERIVADOS DO PETRÓLEO E DE BIOCOMBUSTÍVEIS</fullName>
                <label>19 FABRICAÇÃO DE COQUE, DE PRODUTOS DERIVADOS DO PETRÓLEO E DE BIOCOMBUSTÍVEIS</label>
            </value>
            <value>
                <fullName>20 FABRICAÇÃO DE PRODUTOS QUÍMICOS</fullName>
            </value>
            <value>
                <fullName>21 FABRICAÇÃO DE PRODUTOS FARMOQUÍMICOS E FARMACÊUTICOS</fullName>
            </value>
            <value>
                <fullName>22 FABRICAÇÃO DE PRODUTOS DE BORRACHA E DE MATERIAL PLÁSTICO</fullName>
            </value>
            <value>
                <fullName>23 FABRICAÇÃO DE PRODUTOS DE MINERAIS NÃO-METÁLICOS</fullName>
            </value>
            <value>
                <fullName>24 METALURGIA</fullName>
            </value>
            <value>
                <fullName>25 FABRICAÇÃO DE PRODUTOS DE METAL EXCETO MÁQUINAS E EQUIPAMENTOS</fullName>
                <label>25 FABRICAÇÃO DE PRODUTOS DE METAL, EXCETO MÁQUINAS E EQUIPAMENTOS</label>
            </value>
            <value>
                <fullName>26 FABRICAÇÃO DE EQUIPAMENTOS DE INFORMÁTICA PRODUTOS ELETRÔNICOS E ÓPTICOS</fullName>
                <label>26 FABRICAÇÃO DE EQUIPAMENTOS DE INFORMÁTICA, PRODUTOS ELETRÔNICOS E ÓPTICOS</label>
            </value>
            <value>
                <fullName>27 FABRICAÇÃO DE MÁQUINAS APARELHOS E MATERIAIS ELÉTRICOS</fullName>
                <label>27 FABRICAÇÃO DE MÁQUINAS, APARELHOS E MATERIAIS ELÉTRICOS</label>
            </value>
            <value>
                <fullName>28 FABRICAÇÃO DE MÁQUINAS E EQUIPAMENTOS</fullName>
            </value>
            <value>
                <fullName>29 FABRICAÇÃO DE VEÍCULOS AUTOMOTORES REBOQUES E CARROCERIAS</fullName>
                <label>29 FABRICAÇÃO DE VEÍCULOS AUTOMOTORES, REBOQUES E CARROCERIAS</label>
            </value>
            <value>
                <fullName>30 FABRICAÇÃO DE OUTROS EQUIPAMENTOS DE TRANSPORTE EXCETO VEÍCULOS AUTOMOTORES</fullName>
                <label>30 FABRICAÇÃO DE OUTROS EQUIPAMENTOS DE TRANSPORTE, EXCETO VEÍCULOS AUTOMOTORES</label>
            </value>
            <value>
                <fullName>31 FABRICAÇÃO DE MÓVEIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>