force-app/main/default/objects/Prospect__c/fields/CNPJ_CPF__c.field-meta.xml
<CustomField>
    <fullName>CNPJ_CPF__c</fullName>
    <label>CNPJ/CPF</label>
    <length>18</length>
    <type>Text</type>
</CustomField>