force-app/main/default/objects/Prospect__c/fields/Contatos_do_responsavel__c.field-meta.xml
<CustomField>
    <fullName>Contatos_do_responsavel__c</fullName>
    <inlineHelpText>Complemente esse campo com o nome, e-mail e celular do(a) responsável.</inlineHelpText>
    <label>Contatos do responsável</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>