force-app/main/default/objects/Prospect__c/fields/MIgracao__c.field-meta.xml
<CustomField>
    <fullName>MIgracao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que identifica quais prospects foram migrados de ticket/lead para prospect.</description>
    <label>MIgração?</label>
    <type>Checkbox</type>
</CustomField>