force-app/main/default/objects/Prospect__c/fields/Motivo_de_Desqualificacao__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Desqualificacao__c</fullName>
    <label>Motivo de Desqualificação</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status_do_prospect__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIEE Autônomo</fullName>
            </value>
            <value>
                <fullName>CIEE Autônomo ES</fullName>
            </value>
            <value>
                <fullName>CIEE Autônomo MG</fullName>
            </value>
            <value>
                <fullName>CIEE Autônomo PE</fullName>
            </value>
            <value>
                <fullName>CIEE Autônomo PR</fullName>
            </value>
            <value>
                <fullName>CIEE Autônomo RJ</fullName>
            </value>
            <value>
                <fullName>CIEE Autônomo RS</fullName>
            </value>
            <value>
                <fullName>CIEE Autônomo SC</fullName>
            </value>
            <value>
                <fullName>Concorrente Modelo de Atendimento</fullName>
            </value>
            <value>
                <fullName>Concorrente Preço</fullName>
            </value>
            <value>
                <fullName>Contratação CLT</fullName>
            </value>
            <value>
                <fullName>Dúvidas sobre vagas</fullName>
            </value>
            <value>
                <fullName>Engano</fullName>
            </value>
            <value>
                <fullName>Falta de retorno</fullName>
            </value>
            <value>
                <fullName>Já trabalha com o concorrente</fullName>
            </value>
            <value>
                <fullName>Não demonstrou interesse</fullName>
            </value>
            <value>
                <fullName>Orçamento</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Registro duplicado</fullName>
            </value>
            <value>
                <fullName>Sem previsão para contratação</fullName>
            </value>
            <value>
                <fullName>Serviço gratuito</fullName>
            </value>
            <value>
                <fullName>Tentativas excedidas de contato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>