force-app/main/default/objects/Prospect__c/fields/Origem_do_prospect__c.field-meta.xml
<CustomField>
    <fullName>Origem_do_prospect__c</fullName>
    <label>Origem do prospect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cartão de visita</fullName>
            </value>
            <value>
                <fullName>Indicação externa</fullName>
            </value>
            <value>
                <fullName>Indicação interna</fullName>
            </value>
            <value>
                <fullName>Lista</fullName>
            </value>
            <value>
                <fullName>Pré Cadastro</fullName>
            </value>
            <value>
                <fullName>Prospecção ativa</fullName>
            </value>
            <value>
                <fullName>Receptivo</fullName>
            </value>
            <value>
                <fullName>Sales Navigator (LinkedIn)</fullName>
            </value>
            <value>
                <fullName>Sales_navigator</fullName>
                <label>Sales Navigator - LinkedIn</label>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Leads2b</fullName>
                <isActive>false</isActive>
                <label>Leads2b</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>