force-app/main/default/objects/Prospect__c/fields/Outro_s_concorrente_s__c.field-meta.xml
<CustomField>
    <fullName>Outro_s_concorrente_s__c</fullName>
    <label>Outro(s) concorrente(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>