force-app/main/default/objects/Prospect__c/fields/Outros_motivos__c.field-meta.xml
<CustomField>
    <fullName>Outros_motivos__c</fullName>
    <description>Caso selecione a opção &quot;Outros&quot; como um motivo de desqualificação, o usuário indica o(s) motivo(s) nesse campo.</description>
    <label>Outros motivos</label>
    <length>200</length>
    <type>Text</type>
</CustomField>