force-app/main/default/objects/Prospect__c/fields/Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Responsavel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selecione esse campo se já conseguiu o contato do(a) decisor(a)/responsável por contratação.</inlineHelpText>
    <label>Responsável</label>
    <type>Checkbox</type>
</CustomField>