force-app/main/default/objects/Prospect__c/fields/Responsavel_Decisor__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_Decisor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quando selecionado, esse campo indica que os contatos do prospect são os contatos do responsável/decisor.</description>
    <inlineHelpText>Selecione esse campo se os contatos do prospect são os contatos do decisor/responsável.</inlineHelpText>
    <label>Responsável/Decisor</label>
    <type>Checkbox</type>
</CustomField>