force-app/main/default/objects/Prospect__c/fields/Servicos_apresentados__c.field-meta.xml
<CustomField>
    <fullName>Servicos_apresentados__c</fullName>
    <label>Serviços apresentados</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estágio</fullName>
            </value>
            <value>
                <fullName>Aprendiz</fullName>
            </value>
            <value>
                <fullName>Aprendiz Empregador</fullName>
            </value>
            <value>
                <fullName>Aprendiz Capacitador</fullName>
            </value>
            <value>
                <fullName>Arco em Ocupações Agrícolas</fullName>
            </value>
            <value>
                <fullName>CIEE Educação</fullName>
            </value>
            <value>
                <fullName>CIEE em Movimento</fullName>
            </value>
            <value>
                <fullName>CIEE Global Connection (Estágio Internacional)</fullName>
            </value>
            <value>
                <fullName>CIEE One</fullName>
            </value>
            <value>
                <fullName>CIEE Saúde</fullName>
            </value>
            <value>
                <fullName>Clube CIEE+</fullName>
            </value>
            <value>
                <fullName>Jovem Talento</fullName>
            </value>
            <value>
                <fullName>Lab CIEE</fullName>
            </value>
            <value>
                <fullName>Programas de Inclusão</fullName>
            </value>
            <value>
                <fullName>Somos CIEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>