force-app/main/default/objects/Prospect__c/fields/Status_do_prospect__c.field-meta.xml
<CustomField>
    <fullName>Status_do_prospect__c</fullName>
    <label>Status do prospect</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Não contatado</fullName>
                <default>true</default>
                <label>Não contatado</label>
            </value>
            <value>
                <fullName>Contatado</fullName>
            </value>
            <value>
                <fullName>Desqualificado</fullName>
            </value>
            <value>
                <fullName>Qualificado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>