force-app/main/default/objects/Prospect__c/fields/Trabalha_com_algum_concorrente__c.field-meta.xml
<CustomField>
    <fullName>Trabalha_com_algum_concorrente__c</fullName>
    <description>Lista de concorrente baseada no mapeamento da concorrência (feito pela SUNAT) e nos concorrentes mais citados entre os leads.</description>
    <label>Trabalha com algum concorrente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>99jobs</fullName>
            </value>
            <value>
                <fullName>Across</fullName>
            </value>
            <value>
                <fullName>Agiel</fullName>
            </value>
            <value>
                <fullName>Anima Recursos Humanos</fullName>
            </value>
            <value>
                <fullName>ASH TALENTOS</fullName>
            </value>
            <value>
                <fullName>Catho</fullName>
            </value>
            <value>
                <fullName>Cia de Talentos</fullName>
            </value>
            <value>
                <fullName>Companhia de Estágios</fullName>
            </value>
            <value>
                <fullName>Espro</fullName>
            </value>
            <value>
                <fullName>Estagilize</fullName>
            </value>
            <value>
                <fullName>Eureca</fullName>
            </value>
            <value>
                <fullName>Gelre</fullName>
            </value>
            <value>
                <fullName>IEL</fullName>
            </value>
            <value>
                <fullName>Instituição de ensino</fullName>
            </value>
            <value>
                <fullName>Instituto Via de Acesso</fullName>
            </value>
            <value>
                <fullName>IPP - Instituto Profissionalizante Paulista</fullName>
            </value>
            <value>
                <fullName>ISBET</fullName>
            </value>
            <value>
                <fullName>Newik</fullName>
            </value>
            <value>
                <fullName>Nube</fullName>
            </value>
            <value>
                <fullName>PROE Estágios</fullName>
            </value>
            <value>
                <fullName>Rede Cidadã</fullName>
            </value>
            <value>
                <fullName>Renapsi</fullName>
            </value>
            <value>
                <fullName>Senac</fullName>
            </value>
            <value>
                <fullName>SENAI</fullName>
            </value>
            <value>
                <fullName>Super Estágios</fullName>
            </value>
            <value>
                <fullName>Universia Brasil (Santander)</fullName>
            </value>
            <value>
                <fullName>WallJobs</fullName>
            </value>
            <value>
                <fullName>Zuna</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>