force-app/main/default/objects/Prospect__c/fields/Unidade_de_Atendimento1__c.field-meta.xml
<CustomField>
    <fullName>Unidade_de_Atendimento1__c</fullName>
    <label>Unidade de Atendimento1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aracaju</fullName>
            </value>
            <value>
                <fullName>Barueri</fullName>
            </value>
            <value>
                <fullName>Bauru</fullName>
            </value>
            <value>
                <fullName>Belém</fullName>
            </value>
            <value>
                <fullName>Belo Horizonte</fullName>
            </value>
            <value>
                <fullName>Brasília</fullName>
            </value>
            <value>
                <fullName>Camaçari</fullName>
            </value>
            <value>
                <fullName>Campinas</fullName>
            </value>
            <value>
                <fullName>Campo Grande</fullName>
            </value>
            <value>
                <fullName>Cuiabá</fullName>
            </value>
            <value>
                <fullName>Feira de Santana</fullName>
            </value>
            <value>
                <fullName>Fortaleza</fullName>
            </value>
            <value>
                <fullName>Franca</fullName>
            </value>
            <value>
                <fullName>Goiânia</fullName>
            </value>
            <value>
                <fullName>Guarulhos</fullName>
            </value>
            <value>
                <fullName>Inclusão Social</fullName>
            </value>
            <value>
                <fullName>Itabuna</fullName>
            </value>
            <value>
                <fullName>Itapetininga</fullName>
            </value>
            <value>
                <fullName>João Pessoa</fullName>
            </value>
            <value>
                <fullName>Jundiaí</fullName>
            </value>
            <value>
                <fullName>Maceió</fullName>
            </value>
            <value>
                <fullName>Manaus</fullName>
            </value>
            <value>
                <fullName>Marília</fullName>
            </value>
            <value>
                <fullName>Mogi Guaçu</fullName>
            </value>
            <value>
                <fullName>Natal</fullName>
            </value>
            <value>
                <fullName>Piracicaba</fullName>
            </value>
            <value>
                <fullName>Porto Velho</fullName>
            </value>
            <value>
                <fullName>Presidente Prudente</fullName>
            </value>
            <value>
                <fullName>Ribeirão Preto</fullName>
            </value>
            <value>
                <fullName>Salvador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>