force-app/main/default/objects/Prospect__c/recordTypes/Prospects_de_Feiras.recordType-meta.xml
<RecordType>
    <fullName>Prospects_de_Feiras</fullName>
    <active>true</active>
    <label>Prospects de Feiras</label>
</RecordType>