force-app/main/default/objects/Prospect__c/recordTypes/Prospects_do_Atendimento.recordType-meta.xml
<RecordType>
    <fullName>Prospects_do_Atendimento</fullName>
    <active>true</active>
    <label>Prospects do Atendimento</label>
</RecordType>